Fixed include names.

--- a/mapa.html
+++ b/mapa.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_a17506f98ee048e896e550641b4288b1" style="width: 750px; height: 500px"></div>
+   <div class="folium-map" id="folium_cae7c378bf3c4d7c9f989ee99f82746f" style="width: 750px; height: 500px"></div>
 
    <script>
 
@@ -94,7 +94,7 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_a17506f98ee048e896e550641b4288b1', {
+      var map = L.map('folium_cae7c378bf3c4d7c9f989ee99f82746f', {
                                        center:[42.0, -70.5],
                                        zoom: 7,
                                        maxBounds: bounds,
@@ -323,7 +323,7 @@
 							-70.7166],
 							{'icon':marker_24_icon}
 							);
-      marker_24.bindPopup("<div align='center'> Montauk, NY <br><iframe src='station_scituate_ma.html' alt='image'width='600px' height='275px' frameBorder='0'></div>");
+      marker_24.bindPopup("<div align='center'> Scituate, MA <br><iframe src='station_scituate_ma.html' alt='image'width='600px' height='275px' frameBorder='0'></div>");
       marker_24._popup.options.maxWidth = 600;
       map.addLayer(marker_24)
       
